# IoTAgent-Turtle

./: .coveragerc  .dockerignore  .gitignore  README.md  agent.py  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  test-requirements.txt  tox.ini  transformer.py
.github/workflows/: devskim-analysis.yml
api/: custom_logging.py  logging_config.json  server.py
cli/: command.py
common/: classprecedence.py  commonclass.py  config.json  datatypeconversion.py  listmanagement.py  logging_config.json  regparser.py
doc/: FIWARE IoTAgent-Turtle.postman_collection.json  SDMX to JSON-LD.drawio  api.yaml
docker/: .env  Dockerfile  Readme.md  config.json  docker-compose.yml
docs/: API.md  api.yaml
examples/: data-sex-dim.json  dsd.json  observation.ttl  sep-dsd-1.ttl  sep-dsd-2.ttl
grammar/: grammar.lark  grammar1.lark
ngsild/: ngsild_connector.py
sdmx2jsonld/: README.md
sdmx2jsonld/common/: classprecedence.py  commonclass.py  config.py  datatypeconversion.py  listmanagement.py  rdf.py  regparser.py  tzinfos.py
sdmx2jsonld/cube/: measuretype.py
sdmx2jsonld/exceptions/: __init__.py  exceptions.py
sdmx2jsonld/sdmxattributes/: code.py  compilingorg.py  confirmationStatus.py  currency.py  dataComp.py  decimals.py  dissorg.py  exceptions.py  frequency.py  observationStatus.py  sdmxattribute.py  timeFormat.py  timePerCollect.py  title.py  unitmult.py
sdmx2jsonld/sdmxconcepts/: cogconceptschema.py  compilingorgconcept.py  confstatusconcept.py  currencyconcept.py  datacompconcept.py  decimals.py  dissorgconcept.py  freqconcept.py  obsstatusconcept.py  refareaconcept.py  sdmxconcept.py  timePerCollectConcept.py  timeformatconcept.py  timeperiodconcept.py  titleConcept.py  unitmultconcept.py
sdmx2jsonld/sdmxdimensions/: frequency.py  refarea.py  sdmxdimension.py  timeperiod.py
sdmx2jsonld/transform/: attribute.py  catalogue.py  concept.py  conceptschema.py  context.py  dataset.py  dimension.py  distribution.py  entitytype.py  observation.py  parser.py  property.py  transformer.py
test/: docker-compose.yml
test/common/: test_classprecedence.py
tests/: .env  test1.py
tests/common/: test_classprecedence.py  test_commonclass.py  test_datatypeconversion.py  test_listmanagement.py  test_rdf.py  test_regparser.py
tests/kex/: e1.ttl
tests/sdmxattributes/: test_code.py  test_confirmationStatus.py  test_examples.py  test_observationStatus.py
tests/sdmxattributes/common/: config.json
transform/: attribute.py  catalogue.py  codelist.py  concept.py  conceptschema.py  context.py  datarange.py  dataset.py  dimension.py  entitytype.py  parser.py  property.py  transformer.py
