[tool.poetry]
name = "SDMX2JSON-LD"
version = "1.0.0"
description = "A SDMX in RDF Turtle 1.1 format parser to generate valid JSON-LD and send to FIWARE Context Brokers using ETSI NGSI-LD."
authors = ["Fernando López <fernando.lopez@fiware.org>"]
readme = "./sdmx2jsonld/README.md"
packages = [{include = "sdmx2jsonld"}]

keywords = ["parsing", "ETSI NGSI-LD", "SDMX"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

repository = "https://github.com/flopezag/IoTAgent-Turtle"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
lark = "1.1.7"
secure = "0.3.0"
docopt = "0.6.2"
schema = "0.7.5"
hi-dateinfer = "0.4.6"
fastapi = "0.100.0"
uvicorn = "0.23.1"
python-multipart = "0.0.6"
loguru = "0.7.0"
requests = "2.31.0"
rdflib = "6.3.2"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
tox = "4.6.4"
types-docopt = "0.6.11.3"
types-python-dateutil = "2.8.19.14"
types-pytz = "2023.3.0.0"
types-requests = "2.31.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["cli/command.py", "sdmx2jsonld/transform/parser.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
