[tool.poetry]
name = "SDMX2JSON-LD"
version = "1.0.0"
description = "A SDMX in RDF Turtle 1.1 format parser to generate valid JSON-LD and send to FIWARE Context Brokers using ETSI NGSI-LD."
authors = ["Fernando López <fernando.lopez@fiware.org>"]
readme = "./sdmx2jsonld/README.md"
packages = [{include = "sdmx2jsonld"}]

keywords = ["parsing", "ETSI NGSI-LD", "SDMX"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

repository = "https://github.com/flopezag/IoTAgent-Turtle"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
lark = "1.1.8"
secure = "0.3.0"
docopt = "0.6.2"
schema = "0.7.5"
hi-dateinfer = "0.4.6"
fastapi = "0.104.0"
uvicorn = "0.23.2"
python-multipart = "0.0.6"
loguru = "0.7.2"
requests = "2.31.0"
rdflib = "6.3.2"
python-dateutil = "2.8.2"

[tool.black]
line-length = 120

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
tox = "4.11.3"
types-docopt = "0.6.11.4"
types-python-dateutil = "2.8.19.14"
types-pytz = "2023.3.1.1"
types-requests = "2.31.0.10"
coverage = "7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry_bumpversion.replacements]]
files = ["cli/command.py", "sdmx2jsonld/transform/parser.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=auto -ra --showlocals"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
    "api",
    "cli",
    "common",
    "ngsild",
    "sdmx2jsonld",
]
report.fail_under = 88
run.parallel = true
run.plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "api",
    "cli",
    "common",
    "ngsild",
    "sdmx2jsonld",
]
ignore_missing_imports = true
warn_unused_ignores = true
